<?xml version="1.0"?>
<package format="2">
  <name>hd_map</name>
  <version>0.0.1</version>
  <description>
    The hd_map package.
  </description>


  <maintainer email="stephan.sundermann@fu-berlin.de">Stephan Sundermann</maintainer>

  <license>BSD</license>

  <url type="website">www.autonomos-labs.de</url>

  <author email="stephan.sundermann@fu-berlin.de">Stephan Sundermann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
