<package format="2">
    <name>jsk_rviz_plugin</name>
    <version>0.0.1</version>
    <description>Modified JSK rviz plugins</description>
    <maintainer email="s.sundermann@fu-berlin.de">Stephan Sundermann</maintainer>
    <license>BSD</license>

    <url></url>
    <author>JSK</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>autominy_msgs</depend>
    <depend>rviz</depend>
    <depend>image_geometry</depend>
    <depend>cv_bridge</depend>
    <depend>qt5-default</depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
