<?xml version="1.0"?>
<package format="3">
    <name>low_voltage_shutdown</name>
    <version>0.0.1</version>
    <description>Shuts down the system once the battery is almost drained</description>

    <maintainer email="stephan.sundermann@fu-berlin.de">Autonomos-Labs, FU Berlin</maintainer>

    <license>GPLv3</license>

    <url type="website">https://www.autonomos-labs.de/</url>

    <author email="stephan.sundermann@fu-berlin.de">Autonomos-Labs, FU Berlin</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>autominy_msgs</depend>

    <!-- export of nodelet definition XML -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
